Migrated JDA version from 5.2.1 to 6.3.2 and Java version from 17 to 21 Also fixed Vote System